fix: Tabs active content alignment issue

--- a/packages/raystack/v1/components/tabs/tabs.module.css
+++ b/packages/raystack/v1/components/tabs/tabs.module.css
@@ -70,8 +70,10 @@
 
 .content {
   outline: none;
+	flex: 1;
 }
 
 .content[data-state='inactive'] {
   display: none;
-} 
+	flex: 0;
+}
